--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,24 +2,20 @@
 <resources>
 
     <!--title message    -->
-    <dimen name="title_message_margin">90dp</dimen>
-    <dimen name="title_message_size">14sp</dimen>
-    <dimen name="title_message_maxlines">1</dimen>
-    <dimen name="title_message_maxlength">25dp</dimen>
+    <dimen name="sr_title_message_margin">90dp</dimen>
+    <dimen name="sr_title_message_size">14sp</dimen>
 
     <!--para message    -->
-    <dimen name="message_margin">70dp</dimen>
-    <dimen name="para_message_size">10sp</dimen>
-    <dimen name="message_maxlines">1</dimen>
-    <dimen name="message_maxlength">50dp</dimen>
+    <dimen name="sr_message_margin">70dp</dimen>
+    <dimen name="sr_para_message_size">10sp</dimen>
 
     <!--message layout    -->
-    <dimen name="message_layout_inside_cardview_margin">25dp</dimen>
+    <dimen name="sr_message_layout_inside_cardview_margin">25dp</dimen>
 
     <!--Card view dimensions    -->
-    <dimen name="card_width">1000dp</dimen>
-    <dimen name="card_height">1000dp</dimen>
-    <dimen name="card_margin_bottom">-930dp</dimen>
-    <dimen name="card_corner_radius">800dp</dimen>
-    <dimen name="card_stroke_width">4dp</dimen>
+    <dimen name="sr_card_width">1000dp</dimen>
+    <dimen name="sr_card_height">1000dp</dimen>
+    <dimen name="sr_card_margin_bottom">-930dp</dimen>
+    <dimen name="sr_card_corner_radius">800dp</dimen>
+    <dimen name="sr_card_stroke_width">4dp</dimen>
 </resources>
