--- a/app/src/main/res/layout/full_rainbow_toast_layout.xml
+++ b/app/src/main/res/layout/full_rainbow_toast_layout.xml
@@ -90,8 +90,7 @@
                 android:layout_marginLeft="@dimen/fr_title_message_margin"
                 android:layout_marginRight="@dimen/fr_title_message_margin"
                 android:fontFamily="@font/abeezee_regular"
-                android:maxLength="30"
-                android:maxLines="1"
+                android:maxLines="@integer/fr_title_message_maxlines"
                 android:text="@string/success_lite"
                 android:textAlignment="center"
                 android:textSize="@dimen/fr_title_message_size"
@@ -106,8 +105,7 @@
                 android:layout_marginLeft="@dimen/fr_message_margin"
                 android:layout_marginRight="@dimen/fr_message_margin"
                 android:fontFamily="@font/abeezee_regular"
-                android:maxLength="200"
-                android:maxLines="2"
+                android:maxLines="@integer/fr_message_maxlines"
                 android:text="@string/success_message_lite"
                 android:textAlignment="center"
                 android:textSize="@dimen/fr_para_message_size"
