Name changes and dimension changes

--- a/app/src/main/res/layout/rainbow_toast_layout.xml
+++ b/app/src/main/res/layout/rainbow_toast_layout.xml
@@ -31,7 +31,8 @@
                 android:layout_marginLeft="@dimen/sr_title_message_margin"
                 android:layout_marginRight="@dimen/sr_title_message_margin"
                 android:fontFamily="@font/abeezee_regular"
-                android:maxLines="@integer/sr_message_maxlines"
+                android:maxLength="@integer/sr_title_message_maxlength"
+                android:maxLines="@integer/sr_title_message_maxlines"
                 android:text="@string/success_lite"
                 android:textAlignment="center"
                 android:textColor="@color/sr_default_title_text_color_lite"
@@ -45,7 +46,8 @@
                 android:layout_marginLeft="@dimen/sr_message_margin"
                 android:layout_marginRight="@dimen/sr_message_margin"
                 android:fontFamily="@font/abeezee_regular"
-                android:maxLines="@integer/sr_title_message_maxlines"
+                android:maxLength="@integer/sr_message_maxlength"
+                android:maxLines="@integer/sr_message_maxlines"
                 android:text="@string/success_message_lite"
                 android:textAlignment="center"
                 android:textColor="@color/sr_para_text_color_lite"
