--- a/app/src/main/res/values/integer.xml
+++ b/app/src/main/res/values/integer.xml
@@ -2,7 +2,8 @@
 <resources>
 
     <integer name="sr_title_message_maxlines">1</integer>
+    <integer name="sr_title_message_maxlength">50</integer>
 
-    <integer name="sr_message_maxlines">1</integer>
-
+    <integer name="sr_message_maxlines">2</integer>
+    <integer name="sr_message_maxlength">100</integer>
 </resources>
