Name changes and dimension changes

--- a/app/src/main/res/layout/full_rainbow_toast_layout.xml
+++ b/app/src/main/res/layout/full_rainbow_toast_layout.xml
@@ -91,6 +91,7 @@
                 android:layout_marginRight="@dimen/fr_title_message_margin"
                 android:fontFamily="@font/abeezee_regular"
                 android:maxLines="@integer/fr_title_message_maxlines"
+                android:maxLength="@integer/fr_title_message_maxlength"
                 android:text="@string/success_lite"
                 android:textAlignment="center"
                 android:textSize="@dimen/fr_title_message_size"
@@ -106,6 +107,7 @@
                 android:layout_marginRight="@dimen/fr_message_margin"
                 android:fontFamily="@font/abeezee_regular"
                 android:maxLines="@integer/fr_message_maxlines"
+                android:maxLength="@integer/fr_message_maxlength"
                 android:text="@string/success_message_lite"
                 android:textAlignment="center"
                 android:textSize="@dimen/fr_para_message_size"
