--- a/app/src/main/res/values/integer.xml
+++ b/app/src/main/res/values/integer.xml
@@ -2,7 +2,9 @@
 <resources>
 
     <integer name="fr_title_message_maxlines">1</integer>
+    <integer name="fr_title_message_maxlength">50</integer>
 
     <integer name="fr_message_maxlines">2</integer>
+    <integer name="fr_message_maxlength">100</integer>
 
 </resources>
