Name changes and dimension changes

--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -2,6 +2,8 @@
 <resources>
     <!--title message    -->
     <integer name="ht_title_message_line_1">1</integer>
+    <integer name="ht_title_message_length">50</integer>
     <!--para message    -->
     <integer name="ht_para_message_line_1">1</integer>
+    <integer name="ht_para_message_length">100</integer>
 </resources>
