--- a/app/src/main/res/layout/halloween_toast_layout.xml
+++ b/app/src/main/res/layout/halloween_toast_layout.xml
@@ -26,6 +26,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/eater_regular"
                 android:maxLines="@integer/ht_title_message_line_1"
+                android:maxLength="@integer/ht_title_message_length"
                 android:text="@string/success_lite"
                 android:paddingStart="@dimen/ht_title_message_padding_left_10"
                 android:layout_marginEnd="@dimen/ht_message_layout_margin_left_55"
@@ -41,6 +42,7 @@
                 android:fontFamily="@font/fontdinerswanky_regular"
                 android:layout_marginEnd="@dimen/ht_para_message_padding_right_20"
                 android:maxLines="@integer/ht_para_message_line_1"
+                android:maxLength="@integer/ht_para_message_length"
                 android:text="@string/success_message_lite"
                 android:textColor="@color/ht_para_text_color_lite"
                 android:textSize="@dimen/ht_para_message_size_10" />
