--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.RainbowToast" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.RainbowToast" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#A09FA1</item>
         <item name="colorPrimaryVariant">#A09FA1</item>
