--- a/app/src/main/res/layout/full_rainbow_toast_layout.xml
+++ b/app/src/main/res/layout/full_rainbow_toast_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:id="@+id/rainbowToast"
     android:layout_width="wrap_content"
@@ -90,13 +91,14 @@
                 android:layout_marginLeft="@dimen/fr_title_message_margin"
                 android:layout_marginRight="@dimen/fr_title_message_margin"
                 android:fontFamily="@font/abeezee_regular"
+                android:textFontWeight="@integer/sfr_title_message_fontweight"
                 android:maxLines="@integer/fr_title_message_maxlines"
                 android:maxLength="@integer/fr_title_message_maxlength"
                 android:text="@string/success_lite"
                 android:textAlignment="center"
                 android:textSize="@dimen/fr_title_message_size"
                 android:textColor="@color/fr_custom_title_text_color_lite"
-                />
+                tools:targetApi="p" />
 
             <TextView
                 android:id="@+id/rainbowMessage"
@@ -105,14 +107,16 @@
                 android:layout_below="@id/rainbowTitle"
                 android:layout_marginLeft="@dimen/fr_message_margin"
                 android:layout_marginRight="@dimen/fr_message_margin"
+                android:layout_marginTop="@dimen/sfr_para_message_margintop"
                 android:fontFamily="@font/abeezee_regular"
+                android:textFontWeight="@integer/sfr_message_fontweight"
                 android:maxLines="@integer/fr_message_maxlines"
                 android:maxLength="@integer/fr_message_maxlength"
                 android:text="@string/success_message_lite"
                 android:textAlignment="center"
                 android:textSize="@dimen/fr_para_message_size"
                 android:textColor="@color/fr_para_text_color_lite"
-                />
+                tools:targetApi="p" />
 
         </RelativeLayout>
 
