--- a/RainbowToastLibrary/src/main/res/layout/rainbow_toast_layout.xml
+++ b/RainbowToastLibrary/src/main/res/layout/rainbow_toast_layout.xml
@@ -30,13 +30,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/sr_title_message_margin"
                 android:layout_marginRight="@dimen/sr_title_message_margin"
-                android:fontFamily="@font/rainbow_regular"
                 android:maxLength="@integer/sr_title_message_maxlength"
                 android:maxLines="@integer/sr_title_message_maxlines"
                 android:text="@string/success_lite"
+                android:textFontWeight="@integer/sfr_title_message_fontweight"
                 android:textAlignment="center"
                 android:textColor="@color/sr_default_title_text_color_lite"
-                android:textSize="@dimen/sr_title_message_size" />
+                android:textSize="@dimen/sr_title_message_size"
+                tools:targetApi="p" />
 
             <TextView
                 android:id="@+id/rainbowMessage"
@@ -45,13 +46,15 @@
                 android:layout_below="@id/rainbowTitle"
                 android:layout_marginLeft="@dimen/sr_message_margin"
                 android:layout_marginRight="@dimen/sr_message_margin"
-                android:fontFamily="@font/rainbow_regular"
+                android:layout_marginTop="@dimen/sfr_para_message_margintop"
                 android:maxLength="@integer/sr_message_maxlength"
                 android:maxLines="@integer/sr_message_maxlines"
+                android:textFontWeight="@integer/sfr_message_fontweight"
                 android:text="@string/success_message_lite"
                 android:textAlignment="center"
                 android:textColor="@color/sr_para_text_color_lite"
-                android:textSize="@dimen/sr_para_message_size" />
+                android:textSize="@dimen/sr_para_message_size"
+                tools:targetApi="p" />
 
         </RelativeLayout>
 
