--- a/app/src/main/res/layout/halloween_toast_layout.xml
+++ b/app/src/main/res/layout/halloween_toast_layout.xml
@@ -13,6 +13,12 @@
         android:layout_centerHorizontal="true"
         >
 
+        <ImageView
+            android:id="@+id/halloweenBat"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/app_name" />
+
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -46,7 +52,6 @@
                 android:textSize="@dimen/ht_para_message_size_10" />
 
         </RelativeLayout>
-
 
     </com.google.android.material.card.MaterialCardView>
 
