small naming changes

--- a/RainbowToastLibrary/src/main/res/layout/full_rainbow_toast_layout.xml
+++ b/RainbowToastLibrary/src/main/res/layout/full_rainbow_toast_layout.xml
@@ -89,7 +89,7 @@
                 android:textFontWeight="@integer/sfr_title_message_fontweight"
                 android:maxLines="@integer/fr_title_message_maxlines"
                 android:maxLength="@integer/fr_title_message_maxlength"
-                android:text="@string/success_lite"
+                android:text="@string/ht_success_lite"
                 android:textAlignment="center"
                 android:textSize="@dimen/fr_title_message_size"
                 android:textColor="@color/fr_custom_title_text_color_lite"
@@ -106,7 +106,7 @@
                 android:textFontWeight="@integer/sfr_message_fontweight"
                 android:maxLines="@integer/fr_message_maxlines"
                 android:maxLength="@integer/fr_message_maxlength"
-                android:text="@string/success_message_lite"
+                android:text="@string/ht_success_message_lite"
                 android:textAlignment="center"
                 android:textSize="@dimen/fr_para_message_size"
                 android:textColor="@color/fr_para_text_color_lite"
