--- a/RainbowToastLibrary/src/main/res/layout/rainbow_toast_layout.xml
+++ b/RainbowToastLibrary/src/main/res/layout/rainbow_toast_layout.xml
@@ -32,7 +32,7 @@
                 android:layout_marginRight="@dimen/sr_title_message_margin"
                 android:maxLength="@integer/sr_title_message_maxlength"
                 android:maxLines="@integer/sr_title_message_maxlines"
-                android:text="@string/success_lite"
+                android:text="@string/ht_success_lite"
                 android:textFontWeight="@integer/sfr_title_message_fontweight"
                 android:textAlignment="center"
                 android:textColor="@color/sr_default_title_text_color_lite"
@@ -50,7 +50,7 @@
                 android:maxLength="@integer/sr_message_maxlength"
                 android:maxLines="@integer/sr_message_maxlines"
                 android:textFontWeight="@integer/sfr_message_fontweight"
-                android:text="@string/success_message_lite"
+                android:text="@string/ht_success_message_lite"
                 android:textAlignment="center"
                 android:textColor="@color/sr_para_text_color_lite"
                 android:textSize="@dimen/sr_para_message_size"
