--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:background="@color/white"
@@ -8,79 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
-    <Button
-        android:id="@+id/Success"
-        android:layout_width="200dp"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="160dp"
-        android:backgroundTint="@color/button_background"
-        android:text="Success"
-        android:textSize="12dp"
-        android:textColor="@color/black" />
+        android:layout_centerInParent="true"
+        android:text="@string/app_name" />
 
-    <Button
-        android:id="@+id/Error"
-        android:layout_below="@id/Success"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="Error"
-        android:layout_marginTop="5dp"
-        android:backgroundTint="@color/button_background"
-        android:textColor="@color/black"
-        android:textSize="12dp"
-        android:layout_centerHorizontal="true"
-        />
-
-    <Button
-        android:id="@+id/Warning"
-        android:layout_below="@id/Error"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="Warning"
-        android:layout_marginTop="5dp"
-        android:backgroundTint="@color/button_background"
-        android:textColor="@color/black"
-        android:textSize="12dp"
-        android:layout_centerHorizontal="true"
-        />
-
-    <Button
-        android:id="@+id/Info"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/Warning"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
-        android:backgroundTint="@color/button_background"
-        android:text="Info"
-        android:textSize="12dp"
-        android:textColor="@color/black" />
-
-    <Button
-        android:id="@+id/Custom"
-        android:layout_below="@id/Info"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="Custom"
-        android:layout_marginTop="5dp"
-        android:backgroundTint="@color/button_background"
-        android:textColor="@color/black"
-        android:textSize="12dp"
-        android:layout_centerHorizontal="true"
-        />
-
-    <Button
-        android:id="@+id/FullRainbow"
-        android:layout_below="@id/Custom"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="Full rainbow"
-        android:layout_marginTop="5dp"
-        android:backgroundTint="@color/button_background"
-        android:textColor="@color/black"
-        android:textSize="12dp"
-        android:layout_centerHorizontal="true"
-        />
 </RelativeLayout>
